menu_navegacion+login_normal+login_google_roto

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,7 @@
             android:exported="true">
         </activity>
 
+        <!-- Configura LoginActivity como la actividad de inicio -->
         <activity android:name=".LoginActivity"
             android:exported="true">
             <intent-filter>
